@@ -26,6 +26,10 @@ if RAILS_VERSION == '2.3.2'
 
         matcher.allow_destroy
         matcher.description.should == 'accept nested attributes for category allowing destroy'
+
+        matcher.accept(:name => 'jose')
+        matcher.accept(:name => 'maria')
+        matcher.description.should == 'accept nested attributes for category, allowing destroy, and accepting {:name=>"jose"} and {:name=>"maria"}'
       end
 
       it 'should set association_match? message' do
